force-app/main/default/objects/Employe__c/Employe__c.object-meta.xml
<CustomObject>
    <label>Employe</label>
    <nameField>
        <label>Employee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>