force-app/main/default/objects/Employe__c/fields/Aadhar_Number__c.field-meta.xml
<CustomField>
    <fullName>Aadhar_Number__c</fullName>
    <label>Aadhar Number</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>