force-app/main/default/objects/Employe__c/fields/Experience_in_Tech_Related_Occupation__c.field-meta.xml
<CustomField>
    <fullName>Experience_in_Tech_Related_Occupation__c</fullName>
    <label>Experience in Tech Related Occupation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>