force-app/main/default/objects/Employe__c/fields/Experience_Years__c.field-meta.xml
<CustomField>
    <fullName>Experience_Years__c</fullName>
    <label>Experience(Years)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>