force-app/main/default/objects/Employe__c/fields/Previous_Experience__c.field-meta.xml
<CustomField>
    <fullName>Previous_Experience__c</fullName>
    <label>Previous Experience</label>
    <length>255</length>
    <type>Text</type>
</CustomField>