force-app/main/default/objects/Employe__c/recordTypes/Technician.recordType-meta.xml
<RecordType>
    <fullName>Technician</fullName>
    <active>true</active>
    <label>Technician</label>
</RecordType>