force-app/main/default/objects/Employe__c/validationRules/Aadhar_number_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Aadhar_number_Validation</fullName>
    <active>false</active>
    <errorConditionFormula>OR(ISBLANK( Aadhar_Number__c ) ,  
   LEN( TEXT(Aadhar_Number__c)) &lt; 12 
   )</errorConditionFormula>
    <errorDisplayField>Aadhar_Number__c</errorDisplayField>
    <errorMessage>Aadhar number is Mandatory and should be 12 Digit.</errorMessage>
</ValidationRule>