force-app/main/default/objects/Employe__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>DOB__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Experience_Years__c</columns>
    <columns>Experience_in_Tech_Related_Occupation__c</columns>
    <columns>Email__c</columns>
    <columns>Onboarding__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>